# sdk

./: pyproject.toml
example/: __main__.py
tau/: __init__.py  render.py  vdom.py
tests/: test_tau_sdk.py
