[tool.poetry]
name = "tau"
version = "0.1.0"
description = ""
authors = ["Lleyton Gray <lea@fyralabs.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.42.1"
deepdiff = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
